// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/PlayerAvatar.tools.svelte: Local 1`] = `
<span>
  <figure>
    <img
      alt="Avatar for player Joe le clodo"
      src="default"
    />
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend>
       
      
    </legend>
  </figure>
</span>
`;

exports[`Toolshot components/PlayerAvatar.tools.svelte: No video 1`] = `
<span>
  <figure>
    <img
      alt="Avatar for player Joe le clodo"
      src="default"
    />
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend />
  </figure>
</span>
`;

exports[`Toolshot components/PlayerAvatar.tools.svelte: No video nor avatar 1`] = `
<span>
  <figure>
    <figcaption>
      Joe le clodo
    </figcaption>
     
    <span
      class="host"
    >
      host
    </span>
     
    <legend />
  </figure>
</span>
`;
